--- a/my-app/src/app/page.module.css
+++ b/my-app/src/app/page.module.css
@@ -72,6 +72,10 @@
 .btn {
   width: 100%;
   height: 30%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  /* background: palevioletred; */
 }
 
 .btn button {
@@ -92,5 +96,31 @@
 
 .btn button:hover{
   background-color: #804ea6;
+}
+
+.error {
+  width:100%;
+  height:18%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background: blue; */
+  color: red;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.success {
+  width:100%;
+  height:18%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background: blue; */
+  color: green;
+  font-size: 14px;
+  margin-bottom: 5px;
 }
 
