--- a/my-app/src/app/todo/page.module.css
+++ b/my-app/src/app/todo/page.module.css
@@ -146,3 +146,19 @@
 .deleteButton:hover {
   background-color: rgb(116, 3, 3);
 }
+
+.loading {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 16px;
+  color: #555;
+}
+
+.loadingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-size: 24px;
+  color: #555;
+}
