--- a/my-app/src/app/login/page.module.css
+++ b/my-app/src/app/login/page.module.css
@@ -74,7 +74,8 @@
   width: 100%;
   height: 30%;
   display:flex;
-  justify-content:center;
+  align-items:center;
+  flex-direction: column;
 }
 
 .btn button {
@@ -97,3 +98,28 @@
   background-color: #804ea6;
 }
 
+.error {
+  width:100%;
+  height:18%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background: blue; */
+  color: red;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.success {
+  width:100%;
+  height:18%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background: blue; */
+  color: green;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
